--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </nav>
     </header>
     <div class="screen items-center justify-center">
-      <h1 class="hero-title">404</h1>
+      <h1 class="hero-title">404!</h1>
     </div>
   </body>
 </html>
